updating css causing layout issues

--- a/css/base.css
+++ b/css/base.css
@@ -81,14 +81,26 @@
   display: grid;
   grid-template-columns: subgrid;
   grid-column: full-bleed;
+  &.layout-builder__layout {
+    grid-template-columns: unset;
+  }
   &[data-col-gap="sm"] {
-    --col-layout-col-gap: var(--size-4, 1rem);
+    --col-layout-col-gap: 0px;
+    @media (width > 40rem) {
+      --col-layout-col-gap: var(--size-4, 1rem);
+    }
   }
   &[data-col-gap="md"] {
-    --col-layout-col-gap: var(--size-6, 1.5rem);
+    --col-layout-col-gap: 0px;
+    @media (width > 40rem) {
+      --col-layout-col-gap: var(--size-6, 1.5rem);
+    }
   }
   &[data-col-gap="lg"] {
-    --col-layout-col-gap: var(--size-12, 3rem);
+    --col-layout-col-gap: 0px;
+    @media (width > 40rem) {
+      --col-layout-col-gap: var(--size-12, 3rem);
+    }
   }
   &[data-row-gap="sm"] {
     --col-layout-row-gap: var(--size-4, 1rem);
@@ -99,18 +111,35 @@
   &[data-row-gap="lg"] {
     --col-layout-row-gap: var(--size-12, 3rem);
   }
+  &[data-section-padding="nil"] {
+    --col-layout-padding-block: var(--size-0, 1rem);
+  }
+  &[data-section-padding="sm"] {
+    --col-layout-padding-block: var(--size-16, 1.5rem);
+  }
+  &[data-section-padding="md"] {
+    --col-layout-padding-block: var(--size-20, 2rem);
+  }
+  &[data-section-padding="lg"] {
+    --col-layout-padding-block: var(--size-22, 4rem);
+  }
+  &[data-section-padding="xl"] {
+    --col-layout-padding-block: var(--size-25, 5rem);
+  }
   &[data-horizontal-alignment="start"] {
-    align-items: flex-start;
+    --vertical-alignment: flex-start;
   }
   &[data-horizontal-alignment="center"] {
-    align-items: center;
+    --vertical-alignment: center;
   }
   &[data-horizontal-alignment="end"] {
-    align-items: flex-end;
+    --vertical-alignment: flex-end;
   }
   .columns-wrapper {
     --_column-count: 12;
     display: grid;
+    align-items: var(--vertical-alignment);
+    padding-block: var(--col-layout-padding-block);
     grid-template-columns: repeat(var(--_column-count), 1fr);
     grid-column: body-start/body-end;
     column-gap: var(--col-layout-col-gap);
